@@ -8,9 +8,11 @@ import com.sun.tools.attach.AttachNotSupportedException;
 import com.sun.tools.attach.spi.AttachProvider;
 import junit.framework.Assert;
 import org.junit.Test;
-import sun.tools.attach.HotSpotVirtualMachine;
+import util.Print;
 
 import java.io.IOException;
+import java.lang.management.ManagementFactory;
+import java.lang.management.RuntimeMXBean;
 import java.util.List;
 
 /**
@@ -18,11 +20,13 @@ import java.util.List;
  *
  * @author zqw
  * @see LocalVirtualMachineTemplate
+ * @since jdk 6 引入 Attach API, 用于与JVM进行通信的API, Core Class {@link VirtualMachine}
+ * JDK17 Runtime VM Param : --add-opens java.management/sun.management=ALL-UNNAMED
  */
 public class LocalVirtualMachineTemplateTest {
 
     @Test
-    public void testNew() {
+    public void getVirtualMachineProcessorId() {
         LocalVirtualMachineTemplate localVirtualMachineTemplate = new LocalVirtualMachineTemplate();
         String processId = localVirtualMachineTemplate.getProcessId();
         Assert.assertNotNull(processId);
@@ -31,26 +35,36 @@ public class LocalVirtualMachineTemplateTest {
     }
 
     @Test
-    public void testExecute() throws IOException, AttachNotSupportedException {
+    public void executeCallback() throws IOException, AttachNotSupportedException {
         LocalVirtualMachineTemplate localVirtualMachineTemplate = new LocalVirtualMachineTemplate();
 
-        AttachProvider result = localVirtualMachineTemplate.execute(new HotSpotVirtualMachineCallback<AttachProvider>() {
-            @Override
-            public AttachProvider doInVirtualMachine(HotSpotVirtualMachine virtualMachine) throws IOException {
-                return virtualMachine.provider();
-            }
+        AttachProvider result = localVirtualMachineTemplate.execute((HotSpotVirtualMachineCallback<AttachProvider>) virtualMachine -> {
+            Print.println("VirtualMachineCallback");
+            return virtualMachine.provider();
         });
 
         Assert.assertNotNull(result);
     }
 
     @Test
-    public void test() {
+    public void printVirtualMachines() {
         VirtualMachineManager virtualMachineManager = Bootstrap.virtualMachineManager();
         List<Connector> allConnectors = virtualMachineManager.allConnectors();
         List<VirtualMachine> connectedVirtualMachines = virtualMachineManager.connectedVirtualMachines();
-        System.out.println(allConnectors);
-        System.out.println(connectedVirtualMachines);
+        Print.printColl(allConnectors);
+        Print.printColl(connectedVirtualMachines);
     }
 
+    @Test
+    public void getVirtualMachine() {
+        RuntimeMXBean runtimeMXBean = ManagementFactory.getRuntimeMXBean();
+
+        // Get the name of the JVM
+        String jvmName = runtimeMXBean.getName();
+        Print.grace("JVM Name", jvmName);
+    }
+    @Test
+    public void connectedVM() {
+
+    }
 }
